--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=se02_project
 
-spring.datasource.url=jdbc:mysql://localhost:3306/se02_project?createDatabaseIfNotExist=true
-spring.datasource.username=uml
-spring.datasource.password=2810
+spring.datasource.url=jdbc:mysql://localhost:3306/se02_project001?createDatabaseIfNotExist=true
+spring.datasource.username=wpr
+spring.datasource.password=fit2024
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -22,3 +22,9 @@ spring.jpa.defer-datasource-initialization=true
 
 
 spring.thymeleaf.cache=false
+
+spring.cache.type=NONE
+spring.resources.cache.period=0
+spring.web.resources.cache.cachecontrol.no-cache=true
+spring.web.resources.cache.cachecontrol.no-store=true
+
