--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=se02_project
 
 spring.datasource.url=jdbc:mysql://localhost:3306/se02_project?createDatabaseIfNotExist=true
-spring.datasource.username=tranh
-spring.datasource.password=1234
+spring.datasource.username=uml
+spring.datasource.password=2810
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
