--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=2810
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=chiclighting607@gmail.com
-spring.mail.password=uwncbjmbgthjhbof
+spring.mail.username=no.replyunidecor@gmail.com
+spring.mail.password=swyt hiaq nexz yvmm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
